[package]
name = "imgui-ggez-glue"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"

gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

imgui = "0.4"
imgui-gfx-renderer = "0.4"
